# helix

./: .gitignore  CLAUDE.md  LICENSE  README.md  conftest.py  pyproject.toml  requirements.txt  setup.py  spec.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: auto-approve.yaml  lint.yaml  tests.yaml
.models/: Dockerfile  app.py  docker-compose.yml  entrypoint.sh
.trunk/: trunk.yaml
mock_data/: deal_pipeline.duckdb
mock_data/db/: helix.duckdb.wal
mock_data/db/creator_scripts/: mock_data_creator.py
mock_data/new_issue/: generate_deal_pipeline.py
src/: __init__.py  main.py
src/helix/canvas/: canvas1.ipynb
src/helix/core/connectors/: base.py  duckdb.py
src/helix/core/data/: data_getters.py
tests/core/connectors/: test_duckdb.py
