[project]
name = "helix"
version = "0.1.0"
dependencies = [
    "requests>=2.31.0",
    "duckdb>=1.5.1",
    "pandas==2.1.4",  # legacy oracle dependency
    "numpy==1.26.4",  # legacy oracle dependency
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pre-commit",
]

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]
